# leiden-cuda

./: .gitignore  CMakeLists.txt  README.md  custom-leiden.py  custom_leiden.py  custom_louvain.py  notes.txt  report.txt
analysis/: cugraph_vary_max_iter.ipynb  opt_report.ipynb  yt_perf.ipynb
csrc/: CMakeLists.txt  bindings.cpp  leiden.cpp  leiden_kernel.cu  main.cpp
csrc/include/leiden/: leiden.hpp  leiden_kernel.cuh
csrc/include/leiden/test/: stopwatch_linux.hpp
csrc/src/: bindings.cpp  leiden.cpp  leiden_kernel.cu
csrc/test/: main.cpp  stopwatch_linux.cpp
examples/: leiden-alg.py  my_kernel.py  test1.py  test2.py
examples/cugraph-cpp-api/: CMakeLists.txt  README.md  leiden_cugraph.cpp
louvain-leiden/: notes.txt  test1.py  test2.py
results/: cugraph_vary_max_iter.json  opt_report.json  yt_perf.json
tools/: fetch_datasets.sh
validation/: clique_ring.txt  clique_ring_weighted.txt  weighted_edges.txt
